[package]
name = "todo-actix-seaorm"
version = "0.2.0"
edition = "2021"


[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros", "debug-print" ], default-features = false }
dotenv = "0.15.0"
chrono = "0.4"
serde = "1"
actix-web = "4.1.0"

postgres = "0.19.2"
